tests/invalid/indentation1.nxt
# invalid indentation, expect multiple of 4 spaces
  key 1: value 1
